syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service OrderService {
    // 购物车
    rpc CartItemList(UserInfo) returns (CartItemListResponse); // 获取用户的购物车信息
    rpc CartItemAdd(CartItemRequest) returns (ShopCartInfoResponse); // 添加购物车
    rpc CartItemUpdate(CartItemRequest) returns (google.protobuf.Empty); // 更新购物车
    rpc CartItemDelete(CartItemRequest) returns (google.protobuf.Empty); // 删除购物车
   // 订单
    rpc OrderCreate(OrderRequest) returns (OrderInfoResponse); // 创建订单
    rpc OrderList(OrderFilterRequest) returns (OrderListResponse); // 获取用户的订单列表
    rpc OrderDetail(OrderRequest) returns (OrderInfoDetailResponse); // 获取订单详情
    rpc OrderUpdate(OrderStatus) returns (google.protobuf.Empty); // 更新订单 超时更新 完成更新
    rpc OrderDelete(OrderDelRequest) returns (google.protobuf.Empty); // 删除订单
}
message OrderDelRequest {
    int32 id = 1; // 订单ID
    int32 user_id = 2; // 用户ID
}

message OrderRequest{
  int32 id = 1; // 订单ID
  int32 user_id = 2; // 用户ID
  string address = 3; // 收货地址
  string name = 4; // 收货人姓名
  string mobile = 5; // 收货人手机
  string post= 6; // 留言
}

message OrderInfoResponse {
  int32 id = 1; // 订单ID
  int32 user_id = 2; // 用户ID
  string order_sn = 3; // 订单号
  string pay_type = 4; // 支付方式
  string status = 5; // 订单状态
  string post = 6; // 留言
  float total = 7; // 订单总价
  string address = 8; // 收货地址
  string name = 9; // 收货人姓名
  string mobile = 10; // 收货人手机
}

message OrderFilterRequest {
    int32 user_id = 1; // 用户ID
    string status = 2; // 订单状态
    int32 page = 3; // 页码
    int32 page_size = 4; // 每页数量

}

message OrderListResponse {
    int32 total = 1; // 订单总数
    repeated OrderInfoResponse data = 2; // 订单列表
}

message OrderItemResponse {
  int32 id = 1; // order item ID
  int32 order_id = 2; // 订单ID
  int32 goods_id = 3; // 商品ID
  string goods_name = 4; // 商品名称
  string goods_image = 5; // 商品图片
  float goods_price = 6; // 商品价格
  int32 nums = 7; // 商品数量
}

message OrderInfoDetailResponse {
   OrderInfoResponse order_info = 1; // 订单信息
   repeated OrderItemResponse goods = 2; // 订单商品列表

}

message OrderStatus {
    int32 id = 1; // 订单ID
    string order_sn = 2; // 订单号
    string status = 3; // 订单状态
}


message UserInfo {
    int32 id = 1;
}

message CartItemRequest {
    int32 id = 1;
    int32 user_id = 2;
    int32 goods_id = 3;
    string goods_name = 4;
    string goods_image = 5;
    float goods_price = 6; //占位，冗余
    int32 nums = 7;
    bool checked = 8;
}

message CartItemListResponse {
    int32 total = 1;
    repeated ShopCartInfoResponse cart_items = 2;
}

message ShopCartInfoResponse {
    int32 id = 1;
    int32 user_id = 2;
    int32 goods_id = 3;
    string goods_name = 4;
    string goods_image = 5;
    float goods_price = 6;
    int32 nums = 7;
    bool checked = 8;
}